# ocaml-xapian

./: Makefile  test.ml  xapian.install  xapian.ml  xapian.mli  xapian.opam  xapian_stubs.cc
examples/: csvtest.ml  example.csv  jbuild
lib/: jbuild  xapian.ml  xapian.mli  xapian_stubs.cpp
lib/config/: discover.ml
